[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://assets/black_hole_1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 27.1654, 28.0934 )

[sub_resource type="CircleShape2D" id=7]
radius = 21.457

[sub_resource type="CircleShape2D" id=3]
radius = 117.547

[sub_resource type="Animation" id=6]
resource_name = "ChangeSize"
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.75, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.254902 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.254902 ) ]
}

[node name="Projectile" type="Node2D" groups=[
"projectile",
]]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.254902 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
scale = Vector2( 1, 1.08 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
scale = Vector2( 1.65, 1.65 )
shape = SubResource( 7 )

[node name="DimensionHole" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/DimensionHole"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChangeSize = SubResource( 6 )
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
